server/front/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
  name: front-ingress
spec:
  tls:
  - hosts:
    - front.hc.engineering
    secretName: front-tls
  rules:
  - host: front.hc.engineering
    http:
      paths:
      - backend:
          service:
            name: front
            port: 
              number: 80
        path: /
        pathType: Prefix
